--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Populația României</title>
+<title>NJ</title>
 <link rel="stylesheet" href="vendor/bootstrap.css" />
 <link rel="stylesheet" href="style.css" />
 </head>
